--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
 
 
 
+
+
+<nav class="navbar">
+  <!-- Conteúdo da navbar aqui -->
+</nav>
+
+<a href="/users/sign_up" class="btn btn-primary">Cadastrar</a>
