--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <% provider_name = provider == :google_oauth2 ? 'Gmail' : OmniAuth::Utils.camelize(provider) %>
+    <%= button_to "Sign in with #{provider_name}", omniauth_authorize_path(resource_name, provider), data: { turbo: false }, class: "btn btn-primary mb-2" %><br />
   <% end %>
 <% end %>
+
