--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,14 +3,15 @@
   .rounded-input {
     border-radius: 10px;
     padding: 10px;
-    border-color: #000000; /* Cor das bordas em preto */
+    border-color: #000000;
+    margin-bottom: 20px;
   }
 
   .btn-custom {
-    color: #000000; /* Cor do texto em preto */
-    width: 180px; /* Largura do botão ajustável */
-    background-color: #6c757d; /* Cor de fundo cinza */
-    border-color: #6c757d; /* Cor da borda cinza */
+    color: #000000;
+    width: 180px;
+    background-color: #6c757d;
+    border-color: #6c757d;
   }
 </style>
 
@@ -18,26 +19,44 @@
   <div class="row">
     <div class="col-md-6 mx-auto">
       <div class="text-center">
-        <h2>Crie sua conta</h2>
+        <h2 style="font-weight: bold;">Crie sua conta</h2>
       </div>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
         <%= f.error_notification %>
 
         <div class="form-inputs">
           <%= f.input :name, required: true, autofocus: true, input_html: { autocomplete: "name", class: "rounded-input" }, label: false, placeholder: "Nome Completo *" %>
-          <%= f.input :date_of_birth, as: :date, required: true, start_year: Date.today.year - 100, end_year: Date.today.year, order: [:day, :month, :year], prompt: { day: 'Dia', month: 'Mês', year: 'Ano' }, label: false, input_html: { class: "rounded-input", placeholder: "Data de Nascimento (dd/mm/aaaa) *" } %>
+          <%= f.input :date_of_birth, required: true, as: :string, input_html: { autocomplete: "off", class: "rounded-input", placeholder: "Data de Nascimento (dd/mm/aaaa) *" }, label: false %>
+
           <%= f.input :email, required: true, input_html: { autocomplete: "email", class: "rounded-input" }, label: false, placeholder: "E-mail *" %>
           <%= f.input :password, required: true, hint: ("Mínimo de #{@minimum_password_length} caracteres. Utilize letras, números e símbolos."), input_html: { autocomplete: "new-password", class: "rounded-input" }, label: false, placeholder: "Senha *" %>
           <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password", class: "rounded-input" }, label: false, placeholder: "Confirmação de Senha *" %>
           <%= f.input :agree_terms, as: :boolean, label: "Eu li e concordo com os termos de privacidade" %>
         </div>
 
-        <div class="form-actions">
-          <p class="text-left">* Campos obrigatórios</p>
-          <%= f.button :submit, "Cadastrar", class: "btn btn-lg rounded-input btn-custom" %>
-        </div>
+       <div class="form-actions">
+  <div class="text-left">
+    <p>* Campos obrigatórios</p>
+  </div>
+  <div class="text-center">
+  <%= f.button :submit, "Cadastrar", class: "btn btn-lg rounded-input btn-custom btn-light-gray btn-bold" %>
+</div>
+
+
+</div>
+ </div>
+</div>
+</div>
       <% end %>
     </div>
   </div>
 </div>
+<style>
+.btn-light-gray {
+  background-color: #dddddd; /* Altere o valor para o cinza desejado */
+  color: #333333; /* Altere o valor para a cor desejada */
+}
 
+.btn-bold {
+  font-weight: bold;
+}
