--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,28 @@
-<h2>Forgot your password?</h2>
+<style>
+  .custom-input {
+    border-radius: 10px;
+    border: 1px solid #000000; 
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+</style>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+<div class="text-center">
+  <h2>Esqueceu sua senha?</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, wrapper_html: { class: 'custom-form' }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="form-inputs text-center">
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email", class: 'custom-input rounded-input mx-auto', style: 'max-width: 300px;', placeholder: 'E-mail *' } %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="form-actions">
+      <%= f.button :submit, "Send me reset password instructions", class: 'custom-button' %>
+    </div>
+  <% end %>
+</div>
