--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,11 +22,21 @@ a {
   }
 
   .start-links {
+    text-decoration: none;
     display: flex;
     align-items: center;
     margin-right: 10px;
     color: white;
-
+    a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        color: #B0B0B0;
+        transition: all 0.3s ease-in-out;
+      }
+    }
   }
 
   .end-link {
