--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,6 +1,15 @@
-<p>Hi <%= @user.email %>,</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style>
+      /* Estilos de email precisam estar embutidos aqui */
+    </style>
+  </head>
 
-<p>Today we'll talk about SMTP and Postmark!</p>
-
-<p>See ya!</p>
-
+  <body>
+    <p>Ola <%= @user.email %>,</p>
+    <p>Aqui é Ibson Cabral do Pipoca Ágil</p>
+    <p>Bem-vindo ao nosso site</p>
+  </body>
+</html>
