--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,4 +1,5 @@
-Hi <%= @user.email %>,
+Ola <%= @user.email %>,
 
-Welcome to our website!
-Have a great day!
+Aqui é Ibson Cabral do Pipoca Ágil.
+
+Bem-vindo ao nosso site.
