--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="containner">
   <div class="d-flex first-banner">
     <div class="first-banner-left">
-      <h1>O Podcast <br> mais animado <br> do Mundo Agil</h1>
+      <h1>O Podcast  mais animado  do Mundo Agil</h1>
       <p>Cadastre-se no clube de <br> assinantes e tenha acesso a todos <br> os conteudos excluisivos do <br> mundo da tecnologia</p>
       <a class="btn btn-cadastrar" href="/users/sign_up">Cadastrar</a>
       <p id="possui-conta">ja possui conta? Entre Aqui</p>
@@ -10,7 +10,7 @@
     <div class="first-banner-right">
       <%= image_tag "Photos-Ibson/foto_ibson.png" %> <br>
       <%= link_to "Acesse a trilha do conhecimento", root_path, class: "px-5" %>
-    
+
     </div>
   </div>
   <div class="d-flex second-banner mt-5 ">
