--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,14 +3,14 @@
     <div class="first-banner-left">
       <h1>O Podcast  mais animado  do Mundo Agil</h1>
       <p>Cadastre-se no clube de <br> assinantes e tenha acesso a todos <br> os conteudos excluisivos do <br> mundo da tecnologia</p>
-      <a class="btn btn-cadastrar" href="/users/sign_up">Cadastrar</a>
-      <p id="possui-conta">ja possui conta? Entre Aqui</p>
+      <a class="btn btn-cadastrar" href="/users/sign_up" style="margin-bottom: 10px;">Cadastrar</a>
+      <p id="possui-conta">
+        <a href="/users/sign_in" style="color: #000;">Já possui conta? Entre aqui</a>
+      </p>
     </div>
-
     <div class="first-banner-right">
       <%= image_tag "Photos-Ibson/foto_ibson.png" %> <br>
-      <%= link_to "Acesse a trilha do conhecimento", root_path, class: "px-5" %>
-
+      <%= link_to "Acesse a trilha do conhecimento", root_path, style: "color: #000; margin-right: 5px;" %>
     </div>
   </div>
   <div class="d-flex second-banner mt-5 ">
