--- a/app/views/registrations/confirmation_pending.html.erb
+++ b/app/views/registrations/confirmation_pending.html.erb
@@ -12,11 +12,11 @@
 
     .logo {
       margin-top: 30px;
-      margin-bottom: -10px; /* margem negativa para mover a logo para cima */
+      margin-bottom: -20px; /* margem negativa para mover a logo para cima */
     }
 
     .logo img {
-      width: 200px; /* ajuste o tamanho conforme necessário */
+      width: 500px; /* ajuste o tamanho conforme necessário */
     }
 
     .message-container {
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="logo">
-    <img src="https://res.cloudinary.com/dbtr2yaho/image/upload/v1684956837/Sem_t%C3%ADtulo_yfiutx.png" alt="Logo">
+    <img src="https://res.cloudinary.com/dbtr2yaho/image/upload/v1685651699/logo_pipoca_agil_1_zmmdlk.png" alt="Logo">
   </div>
   <div class="message-container">
     <div class="message">
