--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,6 +34,7 @@
           <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password", class: "rounded-input" }, label: false, placeholder: "Confirmação de Senha *" %>
             <p>* Campos obrigatórios</p>
           <%= f.input :agree_terms, as: :boolean, label: "Eu li e concordo com os termos de privacidade" %>
+          <%= link_to "Eu li e concordo com os termos de privacidade", privacy_path %>
           <%= f.input :agree_terms, as: :boolean, label: "Deseja receber atualizacoes por email?" %>
         </div>
         <div class="text-center">
