star mudando de cor ao clicar

--- a/app/views/registrations/confirmation_pending.html.erb
+++ b/app/views/registrations/confirmation_pending.html.erb
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,31 +8,31 @@
     body {
       text-align: center;
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2; /* cor de fundo da página */
+      background-color: #f2f2f2;
     }
 
     .logo {
       margin-top: 30px;
-      margin-bottom: -20px; /* margem negativa para mover a logo para cima */
+      margin-bottom: -20px;
     }
 
     .logo img {
-      width: 500px; /* ajuste o tamanho conforme necessário */
+      width: 500px;
     }
 
     .message-container {
-      background-color: #ffffff; /* fundo branco */
+      background-color: #ffffff;
       margin-top: 20px;
       padding: 20px;
-      border-radius: 10px; /* bordas arredondadas */
+      border-radius: 10px;
       margin-left: auto;
       margin-right: auto;
-      max-width: 700px; /* largura máxima do contêiner */
+      max-width: 700px;
     }
 
     .message {
       font-size: 16px;
-      color: #000000; /* preto mais forte */
+      color: #000000;
       font-weight: bold;
       margin-bottom: 20px;
     }
@@ -41,12 +42,12 @@
       margin-top: 20px;
       color: #000000;
       text-decoration: none;
-      position: relative; /* torna o posicionamento relativo */
-      left: calc(-15% - 100px); /* ajusta o posicionamento ao centro */
+      position: relative;
+      left: calc(-15% - 100px);
     }
 
     .back-link::before {
-      content: "\2190 "; /* Caractere de seta voltada para a esquerda */
+      content: "\2190 ";
     }
   </style>
 </head>
@@ -56,7 +57,8 @@
   </div>
   <div class="message-container">
     <div class="message">
-      <p>Parabéns pelo cadastro! Para finalizar, confirme seu e-mail. Enviamos as instruções necessárias para sua caixa de entrada. Verifique também o spam.</p>
+      <p>Acabamos de receber seu cadastro! Muito obrigado por se juntar à nossa comunidade! <img src="https://res.cloudinary.com/dbtr2yaho/image/upload/v1685722321/icone-emoji-festa-confete-na-rede-social-do-clube-icone-de-vetor-de-biscoito-de-feliz-aniversario_256722-319_ruxmnl.avif" alt="Ícone de Festa" style="width: 38px; height: 38px; vertical-align: middle;"> Só falta um último passo para que você possa aproveitar todos os benefícios.</p>
+      <p>Acabamos de enviar um link de confirmação para o seu e-mail. Dê uma olhada na sua caixa de entrada (e verifique também a pasta de spam). Assim que clicar nele, seu cadastro será oficialmente confirmado.</p>
     </div>
   </div>
   <a class="back-link" href="/">Voltar</a>
